style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');


/* RESET */
*, *::after, *::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img{
    display: block;
    box-sizing: border-box;
    height: auto;
}

input, textarea, button {
    font: inherit;
}

.nowrap{
    white-space: nowrap;
}
/* VARIABLES */
:root{
    /* FONTS */
    --FONT-FAMILY: 'Inter', sans-serif;
    --FONT-COLOR-1: #ffffff;
    --FONT-COLOR-2: #101111;



    /* COLORS */
    --BG-1: #101111;
    --BG-2: #ffffff;
    --SECONDARY-LINE: #565656;
    --SECONDARY-1: #638596;
    --SECONDARY-2: #c4ebff;


    /* PADDINGS, MARGINS, BORDERS */

}


html{
    background: var(--BG-2);
    color: var(--FONT-COLOR-1);
    /* padding: 10px 20px 20px; */
}

body{
    min-height: 100vh;
    background: var(--BG-2);
    color: var(--BG-2);
    /* padding: 10px 20px 20px; */
}

header, .hero, .section-one, .section-three{
    background: var(--BG-1);
}

footer{
    background: var(--BG-1);
    color: var(--FONT-COLOR-1);
}

hr{
    display: block;
    border: none;
    background: var(--SECONDARY-LINE);
    height: 1px;
    width: 90%;
    margin: 10px auto;
}

h1, h2, h3, p{
    font-family: var(--FONT-FAMILY)
}


/* HAMBURGER MENU */
.header-title-line{
    padding: 0.25rem 0.5rem;
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

.menu-button{
    background-color: transparent;
    border: none;
    width: 48px;
    height: 48px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.menu-icon, .menu-icon::before, .menu-icon::after {
    background-color: var(--BG-2);
    width: 30px;
    height: 4px;
    /* border-radius: 5px; */
    position: absolute;
    transition: all 0.5s;
}

.menu-icon::before, .menu-icon::after{
    content: "";
}

.menu-icon::before{
    transform: translate(-15px, -10px);
}

.menu-icon::after{
    transform: translate(-15px, 10px);
}

:is(header:hover, header:focus-within) .menu-icon{
    background-color: transparent;
    transform: rotate(360deg);
}

:is(header:hover, header:focus-within) .menu-icon::before{
    transform: translateX(-15px) rotate(45deg);
}

:is(header:hover, header:focus-within) .menu-icon::after{
    transform: translateX(-15px) rotate(-45deg);
}

:is(header:hover, header:focus-within) nav{
    display: block;
}

nav{
    background-color: var(--BG-1);
    display: none;
    transform-origin: top center;
    animation: showMenu 0.5s ease-in-out forwards;

}

@keyframes showMenu {
    0% {
        transform: scaleY(0);
    }

    80% {
        transform: scaleY(1.2);
    }

    100% {
        transform: scaleY(1);
    }
}

nav ul{
    list-style-type: none;
    display: flex;
    flex-flow: column nowrap;
}

nav li{
    padding: 0.5rem;
    /* border-top: 1px solid var(--SECONDARY-LINE); */
}

nav a{
    display: block;
    text-align: center;
    width: 80%;
    margin: auto;
}

nav button{
    display: block;
    text-align: center;
    width: 80%;
    /* margin-left: 5px;
    margin-right: 5px; */
    margin: auto;
}

nav a:any-link{
    color: var(--SECONDARY-2);
    font-weight: bold;
    text-decoration: none;
}

nav a:hover, nav a:focus, nav button:focus, nav button:hover{
    transform: scale(1.2);
    transition: all 0.3s;
}


.section-one, .section-two, .section-three{
    padding: 35px 10px 50px 10px;
}


.section-two{
    background: var(--BG-2);
    color: var(--FONT-COLOR-2);
    
}

.section-one{
    display: block;
    border: none;
    border-bottom-left-radius: 25px;
    border-bottom-right-radius: 25px;
    
}

.section-three{
    display: block;
    border: none;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;

}

.section-one-img{
    width: 70%;
}

button{
    /* border: none; */
    border-radius: 999px;
    padding: 10px;
    font-family: inherit;
}

.btn-one{
    background: var(--SECONDARY-1);
    color: var(--SECONDARY-2);
}

.btn-two{
    background: var(--BG-2);
    color: var(--FONT-COLOR-2)
}

.btn-three{
    background: var(--BG-1);
    border-color: var(--SECONDARY-LINE);
    color: var(--FONT-COLOR-1);
}


.hero-header, .hero-text{
    text-align: center;
}

.hero-header{
    font-size: clamp(24px, 6vw, 60px);
    line-height: 1.35;
    /* padding: 6.75%; */
    font-weight: normal;
    /* margin: 1%; */
    


    padding-top: 6.75%;
    /* padding-bottom: ; */
    padding-right: 6.75%;
    padding-left: 6.75%;
}

.hero-text{
    font-size: clamp(12px, 2vw, 30px);
    /* padding: 3%; */

    /* padding-top: 3%; */
    margin-top: 3%;
    margin-bottom: 5%;
    padding-bottom: 3%;
    padding-right: 3%;
    padding-left: 3%;
}

.mint-btn{
    display: block;
    margin: 0 auto;
    padding: 4%;
    border: none;
    height: 40px;
    width: 35%;
}

/* FIX MINT BUTTON RESPONSIVE ISSUE */

/* .hero-row{
    display: flex;
    flex-flow: row;
    margin-top: 30px;
}

.hero-row img{
    height: 70px;
    margin: 3px;
} */























/* BIG SCREEN MEDIA QUERIES */
@media (min-width: 768px) {


    /* NAV BAR */
    header{
        display: flex;
        flex-flow: row nowrap;
        justify-content: space-between;
        padding: 0.5%;
    }

    .menu-button{
        display: none;
    }

    .menu-icon{
        display: none;
    }

    nav{
        background-color: transparent;
        display: flex;
        transform-origin: none;
        animation: none;
        justify-content: right;
    }

    nav ul{
        display: flex;
        flex-flow: row nowrap;
        align-items: center;
        gap: 30px;
        
    }

    nav li{
        font-size: 1.3rem;
        margin: auto;
    }

    nav a{
        display: flex;
        text-align: center;
        width: 100%;
        /* padding: 0%; */
    }

    nav button{
        width: 80%;
        /* margin: auto; */
    }

    nav a:any-link{
        color: var(--SECONDARY-2);
        font-weight: bold;
        text-decoration: none;
    }

    nav button:focus, nav button:hover{
        transform: scale(1.1);
        transition: all 0.3s;
    }

    .btn-one{
        border: none;
        padding: 13px;
        width: 100%;
        /* margin: 2%; */
        display: block;
    }

    .hero-header{
        padding-top: 4%;
        padding-bottom: 4%;
        padding-right: 1%;
        padding-left: 1%;
    }

    .hero-text{
        margin-top: 0;
        margin-bottom: 0;
        margin-right: 5% ;
        margin-left: 5%;
        padding-bottom: 3%;
        padding-right: 3%;
        padding-left: 3%;
    }
}

